scrollbars fix

--- a/src/style/components/EventClassification.css
+++ b/src/style/components/EventClassification.css
@@ -16,20 +16,3 @@
     background-color: rgba(88, 88, 88, 0.4);
     color: white;
 }
-
-/* .eventClassification .livre{
-    color: rgb(255, 255, 255);
-}
-
-.eventClassification .basico{
-    color: rgb(65, 226, 60);
-}
-
-.eventClassification .intermediario{
-    color: rgb(231, 219, 57);
-}
-
-.eventClassification .avancado{
-    color: rgb(255, 8, 0);
-} */
-
