--- a/src/style/components/PopUpEvent.css
+++ b/src/style/components/PopUpEvent.css
@@ -35,6 +35,25 @@
     overflow-x: auto;
     max-height: 200px;
     text-align: justify;
+    padding: 0 5px;
+}
+
+
+.description-container::-webkit-scrollbar {
+    width: 5px;
+}
+  
+.description-container::-webkit-scrollbar-thumb:hover {
+    background: var(--pallete-light)
+}
+  
+.description-container::-webkit-scrollbar-thumb {
+    background: linear-gradient( 180deg, var(--pallete-dark), var(--pallete-light));
+    border-radius: 5px;
+}
+  
+.description-container::-webkit-scrollbar-corner{
+    size: 0;
 }
 
 .popUpDescription > h2 {
