--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,43 +1,31 @@
 * {
   box-sizing: border-box;
-
+  
   padding: 0;
   margin: 0; 
   
   font-family: var(--main-font);
   text-align: center;
   scroll-behavior: smooth;
-
 }
 
- body::-webkit-scrollbar {
-   display: none;
-   width: 0;
- }
-
-/*body{*/
-/*  scrollbar-width: thin;          !* "auto" or "thin" *!*/
-/*  */
-/*}*/
-
-
-*::-webkit-scrollbar {
-  width: 0px;
+.scroll-container{
+  overflow-x: overlay;
 }
 
-/**::-webkit-scrollbar-thumb:hover {*/
-/*  background: var(--pallete-light)*/
-/*} */
+.scroll-container::-webkit-scrollbar {
+  width: 7px;
+}
 
-/**::-webkit-scrollbar-thumb {*/
-/*  background: var(--pallete-dark);*/
-/*  background:  var(--pallete-light);*/
-/*  !* background: linear-gradient( 180deg, var(--pallete-dark), var(--pallete-light)); *!*/
-/*  border-radius: 10px;*/
-/*}*/
+.scroll-container::-webkit-scrollbar-thumb:hover {
+  background: var(--pallete-light)
+}
 
-/**::-webkit-scrollbar-corner{*/
-/*  size: 0;*/
-/*}*/
+.scroll-container::-webkit-scrollbar-thumb {
+  background: linear-gradient( 180deg, var(--pallete-dark), var(--pallete-light));
+  border-radius: 10px;
+}
 
-
+.scroll-container::-webkit-scrollbar-corner{
+ size: 0;
+}
